Closed Bug 1264242 Opened 8 years ago Closed 8 years ago

Not writing memory info for minidumps from child processes

Categories

(Toolkit :: Crash Reporting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox46 --- wontfix
firefox47 + fixed
firefox48 --- fixed

People

(Reporter: ted, Assigned: ted)

References

Details

Attachments

(1 file)

I tested this locally by crashing the content process in my local build (using https://addons.mozilla.org/en-US/firefox/addon/crash-me-now-simple/ ) and inspecting the resulting minidump. I also added an xpcshell test to verify that this works.
Comment on attachment 8741012 [details]
MozReview Request: bug 1264242 - Write memory info streams for Windows Minidumps of child processes. r?bsmedberg

https://reviewboard.mozilla.org/r/46121/#review42617

Thanks Ted!
Attachment #8741012 - Flags: review?(benjamin) → review+
Thanks for fixing this, will this be uplifted to 47?
(In reply to Ting-Yu Chou [:ting] from comment #5)
> Thanks for fixing this, will this be uplifted to 47?

It would be great if we could get it on 47.
It's a pretty small patch, assuming there's no fallout on inbound/Nightly we can definitely uplift it. Let's let it hit Nightly and then we can request uplift.
[Tracking Requested - why for this release]: this is important/essential for e10s memory analysis. I'd like to get this into 47b1
https://hg.mozilla.org/mozilla-central/rev/2eb9b7700eea
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Comment on attachment 8741012 [details]
MozReview Request: bug 1264242 - Write memory info streams for Windows Minidumps of child processes. r?bsmedberg

Approval Request Comment
[Feature/regressing bug #]: e10s
[User impact if declined]: We won't be able to classify and diagnose e10s OOMs properly, and that is one of the top-two e10s risks
[Describe test coverage new/current, TreeHerder]: landed with automated tests and manual verification
[Risks and why]: moderate code refactoring was required
[String/UUID change made/needed]: none
Attachment #8741012 - Flags: approval-mozilla-aurora?
Comment on attachment 8741012 [details]
MozReview Request: bug 1264242 - Write memory info streams for Windows Minidumps of child processes. r?bsmedberg

Improves our ability to diagnose e10s OOMs, Aurora47+
Attachment #8741012 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Ted, I've verified that we're getting memory data for a majority content crashes, but not as many as I'd expect:

https://crash-stats.mozilla.com/search/?release_channel=nightly&build_id=%3E20160415000000&process_type=content&platform=Windows&_facets=signature&_columns=date&_columns=signature&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=system_memory_use_percentage&_columns=total_virtual_memory&_columns=total_physical_memory&_columns=platform_version#crash-reports

This crash, for example, is on Windows 10, with a new-enough build, and still appears not to have the correct memory info. Any thoughts about why that might be?
Flags: needinfo?(ted)
Looking at:
https://crash-stats.mozilla.com/report/index/59b36906-758a-4264-aa2b-5b0ea2160415

I note it has "additional_minidumps browser", so this was written by way of CreateMinidumpsAndPair? Maybe that codepath isn't using the dump type we set elsewhere?
Flags: needinfo?(ted)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: