bug 1264242 - Write memory info streams for Windows Minidumps of child processes. r=bsmedberg

MozReview-Commit-ID: COHFdNiJIqm

--HG--
rename : toolkit/crashreporter/test/unit/test_crashreporter_crash.js => toolkit/crashreporter/test/unit_ipc/test_content_memory_list.js
extra : rebase_source : b8cd3465d10438116a10553ba3eedf5e4cf23f32